--- a/app-config.yaml
+++ b/app-config.yaml
@@ -57,6 +57,12 @@ fasitResources:
     - alias: isso-rp-user
       resourceType: credential
 
+    # AzureAD Business2Consumer
+    - alias: aad_b2c_clientid
+      resourceType: credential
+    - alias: aad_b2c_discovery
+      resourceType: baseurl
+
     # Appdynamics
     - alias: appdynamics
       resourceType: applicationProperties
