--- a/app-config.yaml
+++ b/app-config.yaml
@@ -36,10 +36,12 @@ fasitResources:
       resourceType: loadbalancerconfig
     - alias: modiacontextholderDB
       resourceType: datasource
-    - alias: virksomhet:Enhet_v1
+    - alias: virksomhet:OrganisasjonRessursEnhet_v1
       resourceType: webserviceendpoint
     - alias: virksomhet:OrganisasjonEnhet_v2
       resourceType: webserviceendpoint
+    - alias: ldap
+      resourceType: ldap
 
     # Unleash
     - alias: unleash-api
