--- a/.nais/nais-q6.yaml
+++ b/.nais/nais-q6.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     team: personoversikt
 spec:
-  image: docker.adeo.no:5000/fo/modiacontextholder
+  image: {{ image }}
   port: 8080
   webproxy: true
   liveness:
