--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,21 +59,21 @@ jobs:
           PRINT_PAYLOAD: true
           DRY_RUN: true
           CLUSTER: dev-fss
-          RESOURCE: nais-q0.yaml
+          RESOURCE: .nais/nais-q0.yaml
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
           DRY_RUN: true
           CLUSTER: dev-fss
-          RESOURCE: nais-q1.yaml
+          RESOURCE: .nais/nais-q1.yaml
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           PRINT_PAYLOAD: true
           DRY_RUN: true
           CLUSTER: dev-fss
-          RESOURCE: nais-q6.yaml
+          RESOURCE: .nais/nais-q6.yaml
 
   deploy-prod:
     name: Deploy to prod
@@ -88,4 +88,4 @@ jobs:
           DRY_RUN: true
           PRINT_PAYLOAD: true
           CLUSTER: prod-fss
-          RESOURCE: nais.yaml
+          RESOURCE: .nais/nais.yaml
