--- a/.nais/nais-q6.yaml
+++ b/.nais/nais-q6.yaml
@@ -103,3 +103,5 @@ spec:
     value: "38e07d31-659d-4595-939a-f18dce3446c5"
   - name: KAFKA_BROKERS_URL
     value: "b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443"
+  - name: APP_ENVIRONMENT_NAME
+    value: "q6"
